Fixed placement of "Go" button on mobile

--- a/src/sass/page-create-deck.scss
+++ b/src/sass/page-create-deck.scss
@@ -38,6 +38,7 @@
 			border-radius: $border-radius-button;
 			border-top-right-radius: 0;
 			border-bottom-right-radius: 0;
+			width: 100%;
 		}
 		button {
 			min-width: auto;
@@ -70,32 +71,6 @@
 		.new-deck,
 		.import-data {
 			margin: $lhse/2 auto;
-		}
-	}
-}
-@media (max-width: ($min-width-site * .5)) {
-	.create-deck-page {
-		.new-deck {
-			form {
-				display: flex;
-				flex-direction: column;
-				margin-bottom: 0;
-				row-gap: $lhse/6;
-			}
-			label {
-				align-self: flex-start;
-				margin-bottom: 0;
-				padding-bottom: 0;
-			}
-			input {
-				width: 100%;
-				border-radius: $border-radius-button;
-			}
-			button {
-				align-self: flex-end;
-				margin-left: 0;
-				border-radius: $border-radius-button;
-			}
 		}
 	}
 }
